syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Game {
    int64 id = 1;
    int64 firstPlayer = 2;
    int64 secondPlayer = 3;
    int64 creatingPlayer = 4;
    bytes boardState = 5;
    bool turn = 6;
    google.protobuf.Timestamp updated_on = 7;
    google.protobuf.Timestamp started_on = 8;
}

message Tile {
    int64 row = 1;
    int64 col = 2;
}

message Games {
    repeated Game games = 1;
}

message AuthToken {
    bytes token = 1;
}

message GetGames {
    int32 page = 1;
}

message GetGame {
    int64 id = 1;
}

message CreateGame {
    AuthToken token = 1;
    int64 creatingPlayer = 2;
}

message MakeMove {
    AuthToken token = 1;
    Tile tile = 2;
}

service TicTacGoService {
    rpc GetGames(GetGames) returns (stream Games) {}

    rpc GetGame(GetGame) returns (Game) {}

    rpc CreateGame(CreateGame) returns (Game) {}

    rpc MakeMove(MakeMove) returns (Game) {}
}